# autoblography

./: .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  USAGE.md  cli_with_logs.py  deploy.sh  docker-compose.yml  env_example.txt  generate_blog.sh  pyproject.toml  requirements.txt  setup.py  setup.sh  setup_deployment.sh  simple_curl_guide.md  style.css  test_all.py  test_structure_only.py  vm_config.sh  web_app.py
ai_hackathon_2025/: __init__.py  ask_ai.py  generate_and_save_blog.py  google_document_reader.py  image_generation.py  main.py  process_slack_thread.py  prompt_constant.py  slack_app.py
docs/: SETUP.md  TESTING.md
examples/: EXAMPLES.md  basic_usage.py
scripts/: setup_dev.sh
src/autoblography/: __init__.py  __main__.py
src/autoblography/config/: __init__.py  prompts.py  settings.py
src/autoblography/core/: __init__.py  blog_generator.py
src/autoblography/integrations/: __init__.py  google_docs_integration.py  slack_integration.py
src/autoblography/processors/: __init__.py  ai_processor.py  gdoc_processor.py  slack_processor.py
src/autoblography/utils/: __init__.py  file_utils.py  image_utils.py
templates/: index.html
tests/: test_basic.py  test_integration.py  test_setup.py
